# jaseci-studio

./: .gitignore  LICENSE  README.md  _log_handler.py  dev_server.py  jac.toml  main.jac  models.jac  pyproject.toml  walkers.jac
docs/: studio-developer-journey.md
pages/: gateway.cl.jac  gateway.jac  graph.cl.jac  graph.jac  index.cl.jac  index.jac  layout.cl.jac  layout.jac  logs.jac  packages.jac  sandbox.cl.jac  sandbox.jac  scheduler.cl.jac  scheduler.jac  workbench.cl.jac  workbench.jac
src/jaseci_studio/: __init__.py  dashboard.jac  gateway.jac  plugin.py  sandbox.jac  scheduler.jac  workbench.jac
src/jaseci_studio/api/: routes.py
src/jaseci_studio/utils/: licensing.py
styles/: studio.css
tests/: test_licensing.py  test_routes.py
